--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
   font-family: "Nunito";
-  background-color: #FFFCF2;
+  /* background-color: #FFFCF2; */
   color: rgb(255,255,255);
   font-size: 18px;
   line-height: 25px;
   text-align: center;
   padding: 30px;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 
 h1, h2, h3 {
@@ -87,5 +91,18 @@ a:hover {
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
+  }
+}
+
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
