--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a:hover {
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background: rgba(0, 0, 0, 0);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
