--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a:hover {
   background: rgba(0, 0, 0, 0);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  align-items: center;
+  align-items: left;
 }
 
 .card-product img {
