--- a/style.css
+++ b/style.css
@@ -113,10 +113,10 @@ a:hover {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
-  justify-content: space-between; /* Push content apart */
+  justify-content: space-between;
   align-items: center;
   padding: 16px;
-  text-align: right; /* Align text to the right */
+  text-align: left;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   border-radius: 8px;
 }
@@ -124,13 +124,13 @@ a:hover {
 .card-product a {
   display: block;
   text-decoration: none;
-  color: inherit; /* Keeps text color consistent */
+  color: inherit;
   width: 100%;
   height: 100%;
 }
 
 .card-product:hover {
-  transform: scale(1.05); /* Slight pop effect */
+  transform: scale(1.05);
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
@@ -139,7 +139,6 @@ a:hover {
   height: 100%;
   width: 120px;
   object-fit: cover;
-  order: 2; /* Moves the image to the right */
 }
 
 .card-product-infos {
