--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ a:hover {
   border-radius: 8px;
 }
 
-.card-product a {
+.card-product {
   display: block;
   text-decoration: none;
   color: inherit;
