--- a/style.css
+++ b/style.css
@@ -109,14 +109,13 @@ a:hover {
 
 .card-product {
   overflow: hidden;
-  height: 120px;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between;  /* Ensures image and text are aligned in the same row */
   align-items: center;
   padding: 16px;
-  text-align: right; /* Align text to the right */
+  text-align: left;
   color: white;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   border-radius: 8px;
@@ -138,10 +137,9 @@ a:hover {
 }
 
 .card-product img {
-  height: 100%;
-  width: 120px;
+  height: 100px;  /* Set fixed height for consistent size */
+  width: 120px;  /* Adjust the width */
   object-fit: cover;
-  order: 2; /* Moves image to the right */
 }
 
 .card-product-infos {
