--- a/style.css
+++ b/style.css
@@ -109,30 +109,11 @@ a:hover {
 
 .card-product {
   overflow: hidden;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  justify-content: space-between;  
   align-items: center;
-  padding: 16px;
-  text-align: left;
-  color: white;
-  border-radius: 8px;
-}
-
-.card-product a {
-  text-decoration: none;
-  color: inherit;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-}
-
-.card-product:hover {
-  transform: scale(1.05);
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
 }
 
 .card-product img {
@@ -141,7 +122,20 @@ a:hover {
   object-fit: cover;
 }
 
-.card-product-infos {
-  flex: 1;
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
   padding: 16px;
 }
