--- a/style.css
+++ b/style.css
@@ -110,10 +110,11 @@ a:hover {
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  transition: transform 0.3s ease;
 }
 
 .card-product img {
@@ -134,9 +135,14 @@ a:hover {
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  color: white;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
   text-align: left;
+}
+
+.card-product:hover {
+  transform: scale(1.05);  /* Slight zoom effect on hover */
 }
